--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "url": "git+https://github.com/PiekharievaK/goit-js-hw-08"
   },
   "keywords": [],
-  "author": "Kateryna Piekharieva <pechareva@gmail.com>",
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/PiekharievaK/goit-js-hw-08/issues"
+    "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
@@ -26,8 +26,6 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "@vimeo/player": "^2.16.2",
-    "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.10.1"
   }
 }
